<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContentProvider Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Enter Name</string>
    <string  name="email">Enter email id</string>
    <string name="contact">Enter conctact number</string>
    <string name="add">Add Data</string>
    <string name="save_data">Save Data using Content Provider</string>
    <string name="click">Click on Button to Show all Saved Data</string>
    <string name="show">Show Data</string>

</resources>